fix: overflow hidden for pre

--- a/assets/css/themes/light/texts.css
+++ b/assets/css/themes/light/texts.css
@@ -10,7 +10,7 @@ body {
       @apply bg-gray-200 text-gray-700 py-1 px-2 not-italic rounded text-sm;
     }
     & pre {
-      @apply bg-gray-200 rounded p-2 my-2;
+      @apply bg-gray-200 rounded p-2 my-2 overflow-auto;
     }
     & b, & strong {
       @apply font-bold text-nuxt-green;
